--- a/src/main/resources/templates/Main.html
+++ b/src/main/resources/templates/Main.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Home...</title>
+    <title>Landind...</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bbmStyles.css}" />
     <!--<style>
         body{display: flex;
@@ -31,24 +35,65 @@
     </style>-->
     <style>
         #bg-img{
-            background-image: url("https://png.pngtree.com/png-vector/20230414/ourmid/pngtree-blood-drop-red-illustration-png-image_6694337.png");
+            background-image: url("https://as1.ftcdn.net/v2/jpg/01/08/88/16/1000_F_108881603_N00ywFKqQEzJRrNMr5tf3n63Gjl9dZmq.jpg");
         }
     </style>
 </head>
 <body>
-<div class="header" id=""  >
+
+<!-- External URL -->
+<!--<img th:src="@{https://path/to/the/externalURL/image/logo.png}" alt="External Image">-->
 <!--<img src="" href="https://png.pngtree.com/png-vector/20230414/ourmid/pngtree-blood-drop-red-illustration-png-image_6694337.png"/>-->
 
-
+<div class="row m-0">
         <div th:replace="~{fragments/menu2 :: menu-bar}"></div>
 
         <p th:if="${errorMessage !=null}" th:text="${errorMessage}"></p>
 
+</div>
+<div class="container " id="content-section">
+    <!--<div class="row " style="max-height: 10px">-->
+        <!--<img src="@{https://as1.ftcdn.net/v2/jpg/01/08/88/16/1000_F_108881603_N00ywFKqQEzJRrNMr5tf3n63Gjl9dZmq.jpg}" alt="External Image">
+        -->
+       <!-- <img id="bg-img" src="../images/BloodSaveLife.png" alt="My Image">-->
 
-    <div id="footer"   >
-        <h4 style="color: snow; font-size: 12px;">@copy right 2025 $Blood Bank Mangagement App. All Rights Reserved</h4>
+    <!--</div>-->
+    <div class="row justify-content-center mb-5 mt-5 bg-info fw-bolder" id="content-s">
+        <div class="row m-3 ">
+            <label for="colFormLabel" class="col-sm-2 col-form-label ">Username</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control form-control" id="colFormLabelSm" placeholder="Enter your username...">
+            </div>
+        </div>
+        <div class="row ">
+            <label for="colFormLabel" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="colFormLabel" placeholder="Enter your password...">
+            </div>
+        </div>
+        <div class="row m-3">
+            <label for="colFormLabel" class="col-sm-2 col-form-label ">Email</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control form-control" id="colFormLabelg" placeholder="Enter your email...">
+            </div>
+        </div>
+    </div>
+    <div class="row mt-2 mb-3 justify-content-center" >
+        <div class="card" style="width: 36rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
     </div>
 </div>
+
+<div id="footer"  class="mt-5" >
+    <h4 style="color: snow; font-size: 12px;">@copy right 2025 $Blood Bank Mangagement App. All Rights Reserved</h4>
+</div>
+<!--</div>-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
