--- a/src/main/resources/templates/fragments/menu2.html
+++ b/src/main/resources/templates/fragments/menu2.html
@@ -23,7 +23,7 @@
             <li><a th:href="@{/employee_index}">Employee Index</a></li>-->
         <!--</ul>
     </nav>-->
- <div>
+ <!--<div>-->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">GiveBlood</a>
@@ -39,16 +39,17 @@
                         <a class="nav-link" href="/loginPage">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/registerPage">Login</a>
+                        <a class="nav-link" href="/registerPage">Register</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="adminDashBoard" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Admin Menu
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">View User List</a></li>
                             <li><a class="dropdown-item" href="#">Add Donation</a></li>
-                            <li><hr class="dropdown-divider">list Donors</li>
+                            <li><hr class="dropdown-divider">More Actions</li>
+                            <li><a class="dropdown-item" href="#">list Donors</a></li>
                             <li><a class="dropdown-item" href="#">Edit Donation</a></li>
                         </ul>
                     </li>
@@ -63,7 +64,7 @@
             </div>
         </div>
     </nav>
- </div>
+ <!--</div>-->
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
