--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -14,6 +14,7 @@
          <li><a href="/registerPage">Register</a></li>
         <li><a href="/loginPage">Login</a></li>
         <li><a href="/landingPage">Landing</a></li>
+        <li><a href="/userRegisterPage">SignUp</a></li>
          <!--<li><a th:href="@{/user_index}">User Index</a></li>-->
         <!--<li><a th:href="@{/customer_index}">Customer Index</a></li>
         <li><a th:href="@{/employee_index}">Employee Index</a></li>-->
