--- a/src/main/resources/templates/Main.html
+++ b/src/main/resources/templates/Main.html
@@ -8,7 +8,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bbmStyles.css}" />
     <!--<style>
         body{display: flex;
@@ -34,9 +33,10 @@
         }
     </style>-->
     <style>
-        #bg-img{
+        /*#bg-img{
+
             background-image: url("https://as1.ftcdn.net/v2/jpg/01/08/88/16/1000_F_108881603_N00ywFKqQEzJRrNMr5tf3n63Gjl9dZmq.jpg");
-        }
+        }*/
     </style>
 </head>
 <body>
@@ -45,21 +45,22 @@
 <!--<img th:src="@{https://path/to/the/externalURL/image/logo.png}" alt="External Image">-->
 <!--<img src="" href="https://png.pngtree.com/png-vector/20230414/ourmid/pngtree-blood-drop-red-illustration-png-image_6694337.png"/>-->
 
-<div class="row m-0">
-        <div th:replace="~{fragments/menu2 :: menu-bar}"></div>
 
-        <p th:if="${errorMessage !=null}" th:text="${errorMessage}"></p>
-
-</div>
 <div class="container " id="content-section">
+    <img src="../images/Donate Blood.png" alt="My Image">
+    <!-- Include the menu bar fragment -->
+    <div th:replace="~{fragments/menu :: menu-bar}"></div>
+
+    <!-- Include Message if any -->
+    <p th:if="${errorMessage !=null}" th:text="${errorMessage}"></p>
     <!--<div class="row " style="max-height: 10px">-->
         <!--<img src="@{https://as1.ftcdn.net/v2/jpg/01/08/88/16/1000_F_108881603_N00ywFKqQEzJRrNMr5tf3n63Gjl9dZmq.jpg}" alt="External Image">
         -->
        <!-- <img id="bg-img" src="../images/BloodSaveLife.png" alt="My Image">-->
 
     <!--</div>-->
-    <div class="row justify-content-center mb-5 mt-5 bg-info fw-bolder" id="content-s">
-        <div class="row m-3 ">
+    <div class="row  col-md-5 justify-content-center mb-5 mt-5 bg-info fw-bolder" id="content-s">
+        <div class="row  m-3 ">
             <label for="colFormLabel" class="col-sm-2 col-form-label ">Username</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control form-control" id="colFormLabelSm" placeholder="Enter your username...">
