--- a/src/main/resources/templates/fragments/menu2.html
+++ b/src/main/resources/templates/fragments/menu2.html
@@ -26,6 +26,7 @@
  <!--<div>-->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
+            <img src="../images/Donate Blood.png" alt="My Image">
             <a class="navbar-brand" href="#">GiveBlood</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,10 +37,16 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/loginPage">Login</a>
+                        <a class="nav-link" href="/donorPage">Donor</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/loginPage">Login</a>
+                    </li>
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="/registerPage">Register</a>
+                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/userRegisterPage">SignUp</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="adminDashBoard" role="button" data-bs-toggle="dropdown" aria-expanded="false">
