--- a/src/main/resources/templates/donorForm.html
+++ b/src/main/resources/templates/donorForm.html
@@ -19,7 +19,13 @@
 <div th:replace="~{fragments/menu2 :: menu-bar}"></div>
 
 <!-- Include Message if any -->
-<p th:if="${errorMessage !=null}" th:text="${errorMessage}"></p>
+<!--<p th:if="${errorMessage !=null}" th:text="${errorMessage}"></p>-->
+<!-- Show Error Message -->
+<div th:if="${errorMessage}" class="alert  alert-dismissible fade show mt-4" role="alert" style="background-color: lightpink">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    <p th:text="${errorMessage}"></p>
+</div>
 <div class="container mt-5">
 
     <!-- Card to contain the form -->
@@ -27,7 +33,7 @@
         <div class="card-header text-center">
             <h3>Donor Information</h3>
         </div>
-        <div class="card-body" id="donor-card">
+        <div class="card-body" id="donor-card" style="background-color: #F1F1F9">
             <form action="/addDonor" method="POST">
                 <!-- Full Name -->
                 <div class="mb-3">
