--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,14 +14,20 @@
     <!-- Include the menu bar fragment -->
     <div th:replace="~{fragments/menu2 :: menu-bar}"></div>
 
-    <!-- Include Message if any -->
-    <!--<p th:if="${errorMessage !=null}" th:text="${errorMessage}"></p>-->
-    <!-- Show Error Message -->
-    <div th:if="${errorMessage}" class="alert  alert-dismissible fade show mt-4" role="alert" style="background-color: lightpink">
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        <p th:text="${errorMessage}"></p>
-    </div>
+
     <div class="container mt-5 mb-5">
+        <!-- Include Message if any -->
+        <!--<p th:if="${errorMessage !=null}" th:text="${errorMessage}"></p>-->
+        <!-- Show Error Message -->
+        <div th:if="${errorMessage}" class="alert  alert-dismissible fade show mt-4" role="alert" style="background-color: lightpink">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <p th:text="${errorMessage}"></p>
+        </div>
+        <div th:if="${registered}" class="alert  alert-dismissible fade show mt-4" role="alert" style="background-color: lightpink">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <p th:text="${registered}"></p>
+        </div>
+
     <!-- Login Form -->
 
     <div class="card mx-auto" style="max-width: 600px;">
@@ -33,7 +39,7 @@
                 <!-- User Name -->
                 <div class="mb-3">
                     <label for="userName" class="form-label">Enter User Name</label>
-                    <input type="text" class="form-control" id="userName" name="userName"  required>
+                    <input type="text" class="form-control" id="userName" name="username"  required>
                 </div>
 
                 <!-- User Password -->
