--- a/src/main/resources/templates/registrationForm.html
+++ b/src/main/resources/templates/registrationForm.html
@@ -24,6 +24,11 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
             <p th:text="${errorMessage}"></p>
         </div>
+        <div th:if="${successMessage}" class="alert alert-dismissible fade show mt-4" role="alert" style="background-color: lightgreen">
+            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <p th:text="${successMessage}"></p>
+        </div>
         <div class="card mx-auto" style="max-width: 600px;">
             <div class="card-header text-center">
                 <h3>User Registration</h3>
