--- a/src/main/resources/static/css/bbmStyles.css
+++ b/src/main/resources/static/css/bbmStyles.css
@@ -47,6 +47,19 @@ body::before {
 #donor-card{
     background-color:#F1F1F9; /* #495057;*/
 }
+.quiz-container{
+    background-color:#F1F1F9;
+}
+hr{
+    width: 100%; color: #555555;
+}
+.embed-responsive{
+    background-color: mintcream;
+    text-align: center;
+    /*position: absolute;*/
+    position: relative;
+    z-index: 1;
+}
 
 .footer{
     background-color: firebrick;
