--- a/src/main/resources/templates/fragments/menu2.html
+++ b/src/main/resources/templates/fragments/menu2.html
@@ -37,6 +37,9 @@
                         <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/quizPage">Quiz</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/donorPage">Donor</a>
                     </li>
                     <li class="nav-item">
