--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,6 +27,10 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
             <p th:text="${registered}"></p>
         </div>
+        <div th:if="${message}" class="alert  alert-dismissible fade show mt-4" role="alert" style="background-color: lightpink">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <p th:text="${message}"></p>
+        </div>
 
     <!-- Login Form -->
 
