commit: working login with hashpassword, user role is returned as null ???.

--- a/src/main/resources/templates/registrationForm.html
+++ b/src/main/resources/templates/registrationForm.html
@@ -59,10 +59,10 @@
             <div class="mb-3">
                 <label for="role" class="form-label">Role</label>
                 <select type="text" id="role" name="role" class="form-select" required>
-                    <option value="admin">Admin</option>
-                    <option value="donor">Donor</option>
-                    <option value="employee">Employee</option>
-                    <option value="hospital_admin">Hospital Admin</option>
+                    <option value="DONOR">Donor</option>
+                    <option value="ADMIN">Admin</option>
+                    <option value="EMPLOYEE">Employee</option>
+                    <option value="HOSPITAL_ADMIN">Hospital Admin</option>
                 </select>
             </div>
 
