--- a/src/main/resources/templates/fragments/menu2.html
+++ b/src/main/resources/templates/fragments/menu2.html
@@ -54,8 +54,8 @@
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="adminDashBoard" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li class="nav-item dropdown" th:if="${#ctx.session.CurrentUser != null }">
+                        <a class="nav-link dropdown-toggle" href="/adminDashBoard" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Admin Menu
                         </a>
                         <ul class="dropdown-menu">
