--- a/src/main/resources/templates/fragments/menu2.html
+++ b/src/main/resources/templates/fragments/menu2.html
@@ -53,18 +53,22 @@
 
                         <a class="nav-link" href="/landingPage">Landing</a>
                     </li>
+                   <!-- <li class="nav-item" th:if="${#ctx.session.loggedInUser.getRole().ADMIN }">
+                    <li class="nav-item" th:if="${#ctx.session.CurrentUser != null }">
+                        <a class="nav-link" href="/adminDashBoard">Admin</a>
+                    </li>-->
                     <!-- Only show the logout button in menu when logged in -->
                     <li class="nav-item" th:unless="${#ctx.session.CurrentUser == null}">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
 
                     <li class="nav-item dropdown" th:if="${#ctx.session.CurrentUser != null }">
-                        <a class="nav-link dropdown-toggle" href="/adminDashBoard" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Admin Menu
+                        <a class="nav-link dropdown-toggle" href="/adminMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            AdminMenu
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">View User List</a></li>
-                            <li><a class="dropdown-item" href="#">Add Donation</a></li>
+                            <li th:if="${#ctx.session.CurrentUser != null }"><a class="dropdown-item" href="/addDonorPage">Add Donor</a></li>
                             <li><hr class="dropdown-divider">More Actions</li>
                             <li><a class="dropdown-item" href="#">list Donors</a></li>
                             <li><a class="dropdown-item" href="#">Edit Donation</a></li>
