--- a/src/main/resources/templates/donorForm.html
+++ b/src/main/resources/templates/donorForm.html
@@ -35,10 +35,15 @@
         </div>
         <div class="card-body" id="donor-card" style="background-color: #F1F1F9">
             <form action="/addDonor" method="POST">
-                <!-- Full Name -->
+                <!-- First Name -->
                 <div class="mb-3">
-                    <label for="fullName" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" id="fullName" name="fullName"  required>
+                    <label for="firstName" class="form-label">First Name</label>
+                    <input type="text" class="form-control" id="firstName" name="firstName"  required>
+                </div>
+                <!-- Last Name -->
+                <div class="mb-3">
+                    <label for="lastName" class="form-label">Last Name</label>
+                    <input type="text" class="form-control" id="lastName" name="lastName"  required>
                 </div>
 
                 <!-- Date of Birth -->
