--- a/src/main/resources/templates/quizResult.html
+++ b/src/main/resources/templates/quizResult.html
@@ -11,7 +11,7 @@
 <div th:replace="~{fragments/menu2 :: menu-bar}"></div>
 <div class="container mt-5">
     <h2>Blood Donor Eligibility Results</h2>
-    <p><strong>1. Are you between 18 and 65 years old?</strong> <span th:text="${question1}"></span></p>
+    <p><strong>1. Are you between 18 and 65 years old?</strong><span></span> <span th:text="${question1}"></span></p>
     <p><strong>2. Do you weigh at least 50 kg (110 lbs)?</strong> <span th:text="${question2}"></span></p>
     <p><strong>3. Have you been feeling healthy for the last 24 hours?</strong> <span th:text="${question3}"></span></p>
     <p><strong>4. Have you been diagnosed with or experienced symptoms of any major illness in the past 30 days (e.g., fever, cold, flu)?</strong> <span th:text="${question4}"></span></p>
@@ -27,10 +27,12 @@
     <p><strong>14. Have you recently received a vaccination (such as for flu or COVID-19)?</strong> <span th:text="${question14}"></span></p>
     <p><strong>15. Have you ever been diagnosed with HIV/AIDS or Hepatitis B/C?</strong> <span th:text="${question15}"></span></p>
 
+    <br/><br/>
     <h4 class="mt-3" th:if="${isEligible}">
         You are eligible to donate blood!
     </h4>
-    <h4 class="mt-3" th:unless="${isEligible}">
+    <!--<h4 class="mt-3" th:unless="${isEligible}">-->
+    <h4 class="mt-3" th:if="${!isEligible}">
         Sorry, you are not eligible to donate blood at this time.
     </h4>
 
