commit: Majority, updating donor about 90% complete.

--- a/src/main/resources/templates/listBloodDonations.html
+++ b/src/main/resources/templates/listBloodDonations.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List Dodors</title>
+    <title>List Donations</title>
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome for Icons -->
@@ -14,39 +14,28 @@
 <!-- Include the menu bar fragment -->
 <div th:replace="~{fragments/menu2 :: menu-bar}"></div>
 <div class="container">
-    <h1 class="text-center mb-3">List of Donors</h1>
-    <table class="table table-bordered table-hover">
+    <table class="table">
         <thead>
-            <tr>
-                <th>DonorID</th>
-                <th>UserID</th>
-                <th>FullName</th>
-                <th>DateOfBirth</th>
-                <th>ContactNumber</th>
-                <th>Address</th>
-                <th>Actions</th>
-            </tr>
+        <tr>
+            <th>DonationID</th>
+            <th>DonorID</th>
+            <th>BloodTypeID</th>
+            <th>Quantity</th>
+            <th>CollectionDate</th>
+            <th>Status</th>
+        </tr>
         </thead>
-        <tbody class="table-group-divider">
-            <tr th:each="donor : ${donors}">
-                <!--<td><a th:href="@{/getDonor(donorID =${donor.getDonorID()} )}"
-                       th:text="${donor.getDonorID()}"></a></td> -->
-                <td th:text="${donor.getDonorID()}"></td>
-                <td th:text="${donor.getUserID()}"></td>
-                <td th:text="${donor.getFullName()}"></td>
-                <td th:text="${donor.getDateOfBirth()}"></td>
-                <td th:text="${donor.getContactNumber()}"></td>
-                <td th:text="${donor.getAddress()}"></td>
-                <td style="white-space: nowrap">
-                    <a class="btn btn-primary btn-sm" th:href="@{/editDonor(donorID=${donor.getDonorID()})}">
-                        <!--th:href="/editDonor(${donor.getDonorID})" >-->Edit
-                    </a>
-                    <a class="btn btn-danger btn-sm">
-                       <!--th:href="/deleteDonor(${donor.getDonorID})"
-                        onclick="return confirm('Are you sure ?')">-->Delete
-                    </a>
-                </td>
-            </tr>
+        <tbody>
+        <tr th:each="donation : ${bloodDonationList}">
+            <!--<td><a th:href="@{/getDonor(donorID =${donor.getDonorID()} )}"
+                   th:text="${donor.getDonorID()}"></a></td> -->
+            <td th:text="${donation.getDonationID()}"></td>
+            <td th:text="${donation.getDonor().getDonorID()}"></td>
+            <td th:text="${donation.getBloodType()}"></td>
+            <td th:text="${donation.getQuantity()}"></td>
+            <td th:text="${donation.getCollectionDate()}"></td>
+            <td th:text="${donation.getStatus()}"></td>
+        </tr>
 
         </tbody>
 
