--- a/src/main/resources/templates/fragments/menu2.html
+++ b/src/main/resources/templates/fragments/menu2.html
@@ -69,9 +69,12 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">View User List</a></li>
                             <li th:if="${#ctx.session.CurrentUser != null }"><a class="dropdown-item" href="/addDonorPage">Add Donor</a></li>
+                            <li><a class="dropdown-item" href="/viewDonors">list Donors</a></li>
                             <li><hr class="dropdown-divider">More Actions</li>
                            <!-- <li><a class="dropdown-item" href="/listDonorsPage">list Donors</a></li>-->
-                            <li><a class="dropdown-item" href="/viewDonors">list Donors</a></li>
+                            <!--<li><a class="dropdown-item" href="/addDonation">Add Donation</a></li>-->
+                            <li><a class="dropdown-item" href="/getDonationForm">Add Donation</a></li>
+                            <li><a class="dropdown-item" href="/listDonations">list Donations</a></li>
                             <li><a class="dropdown-item" href="#">Edit Donation</a></li>
                         </ul>
                     </li>
